# AtomPacker

./: .gitignore  ARCHITECTURE.md  Cu-MOC.mol2  MTC1.mol2  PCC-2a.mol2  Phos-cage-decamer.mol2  Phos-cage.mol2  README.md  build-packmol.sh  debug.py  obb.py  obb_pymol.py  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: deploy-test.yml  deploy.yml  integration-testing.yml  publish-gh-pages.yml  testing.yml
AtomPacker/: AtomPacker.py  __init__.py
AtomPacker/core/: __init__.py
AtomPacker/core/grid/: __init__.py  characterize.py  coordinates.py
AtomPacker/core/io/: __init__.py
AtomPacker/core/io/mmcif/: __init__.py  file.py
AtomPacker/core/io/mol2/: __init__.py  file.py
AtomPacker/core/io/pdb/: __init__.py  file.py
AtomPacker/core/io/vdw/: __init__.py  file.py
AtomPacker/core/io/xyz/: __init__.py  file.py
AtomPacker/structure/: Cage.py  Cavity.py  Cluster.py  Openings.py  __init__.py  data.py
data/: C1.mol
docs/: about.rst  index.rst  installation.rst  quick-start.rst  tutorial.rst
docs/source/: api.rst  conf.py  tutorial.rst
old_tests/data/: C1.cif
pypackmol/: __init__.py  pypackmol.py
tests/: conftest.py  template_packmol.inp  template_packmol_with_cavity.inp  test_cage.py  test_cavity.py  test_cluster.py  test_pipeline.py  test_pipeline_1.py  test_pipeline_2.py  test_workflow.py
tests/data/: ZOCXOH.cif  ZOCXOH.mol  ZOCXOH.xyz
