[build-system]
requires = ["setuptools>=62.0", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "AtomPacker"
description = "A python package for packing nanoclusters into supramolecular cages"
authors = [
    { name = "João V. S. Guerra", email = "jvsguerra@gmail.com" },
    { name = "Gabriel E. Jara" },
    { name = "Paulo S. Lopes-de-Oliveira" },
    { name = "György Szalóki" },
]
maintainers = [{ name = "João V. S. Guerra", email = "jvsguerra@gmail.com" }]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = ["computational chemistry", "atom packing", "sphere packing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    'Programming Language :: Python',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ase>=3.26.0",
    "biopython>=1.85.0",
    "MDAnalysis>=2.9.0",
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "plotly>=6.0.0",
    "pyKVFinder>=0.8.0",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black==25.1.0", "flake8==7.3.0", "pytest==8.4.2"]
docs = ["sphinx>=8.1.3", "sphinx-rtd-theme>=3.0.2"]

[project.urls]
homepage = "https://github.com/cnpem/AtomPacker"
documentation = "https://cnpem.github.io/AtomPacker/"
issues = "https://github.com/cnpem/AtomPacker/issues"

[tool.setuptools]
packages = [
    "AtomPacker",
    "AtomPacker.core",
    "AtomPacker.core.io",
    "AtomPacker.core.io.mmcif",
    "AtomPacker.core.io.mol2",
    "AtomPacker.core.io.pdb",
    "AtomPacker.core.io.vdw",
    "AtomPacker.core.io.xyz",
    "AtomPacker.core.grid",
    "AtomPacker.structure",
]

[tool.setuptools.dynamic]
version = { attr = "AtomPacker.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
