[build-system]
requires = ["setuptools>=77.0.3,<81", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AtomPacker"
description = "A python package for packing nanoclusters into supramolecular cages"
authors = [
    { name = "João V. S. Guerra", email = "jvsguerra@gmail.com" },
    { name = "Gabriel E. Jara" },
    { name = "Rick H. Hokama" },
    { name = "Paulo S. Lopes-de-Oliveira" },
    { name = "György Szalóki" },
]
maintainers = [{ name = "João V. S. Guerra", email = "jvsguerra@gmail.com" }]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = ["computational chemistry", "atom packing", "sphere packing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    'Programming Language :: Python',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ase>=3.27.0,<4.0.0",
    "biopython>=1.86.0",
    "MDAnalysis>=2.10.0,<3.0.0",
    "numpy>=2.0.0,<2.5.0",
    "pandas>=3.0.0",
    "plotly>=6.0.0,<6.6.0",
    "pyKVFinder>=0.9.0,<1.0.0",
    "scikit-learn>=1.8.0,<2.0.0",
    "tqdm>=4.67.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black>=26.1.0", "flake8>=7.3.0", "pytest>=9.0.0"]
docs = ["sphinx>=9.1.0", "sphinx-rtd-theme>=3.1.0"]

[project.urls]
homepage = "https://github.com/cnpem/AtomPacker"
documentation = "https://cnpem.github.io/AtomPacker/"
issues = "https://github.com/cnpem/AtomPacker/issues"

[tool.setuptools]
packages = [
    "AtomPacker",
    "AtomPacker.core",
    "AtomPacker.core.io",
    "AtomPacker.core.io.mmcif",
    "AtomPacker.core.io.mol2",
    "AtomPacker.core.io.pdb",
    "AtomPacker.core.io.vdw",
    "AtomPacker.core.io.xyz",
    "AtomPacker.core.grid",
    "AtomPacker.structure",
]

[tool.setuptools.dynamic]
version = { attr = "AtomPacker.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
